data/derived/comb/progs/unify/prog3370.ml.out
Characters 90-91:
  x + 1
      ^
Error: This expression has type int
       This is not a function; it cannot be applied.
